--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xplodio",
   "version": "0.2.0",
+  "proxy": "http://localhost:8000",
   "repository": {
     "type" : "git",
     "url" : "https://github.com/jtduchesne/xplodio.git"
