--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Jean-Thomas Duchesne",
   "private": true,
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   },
