--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Jean-Thomas Duchesne",
   "private": true,
   "dependencies": {
+    "busboy": "^0.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
