Serve static files from upload directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # credentials
 **/.env
 
+# Uploads (keep only the folder)
+/backend/files/*
+!/backend/files/.gitkeep
+
 # dependencies
 **/node_modules
 /.pnp
