--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.3.0",
   "proxy": "http://localhost:8000",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/jtduchesne/xplodio.git"
+    "type": "git",
+    "url": "https://github.com/jtduchesne/xplodio.git"
   },
   "author": "Jean-Thomas Duchesne",
   "private": true,
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
