--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
   },
@@ -26,7 +28,13 @@
   "eslintConfig": {
     "extends": [
       "react-app"
-    ]
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2018
+    },
+    "rules": {
+      "semi": "warn"
+    }
   },
   "browserslist": {
     "production": [
