--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "wavesurfer.js": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
